<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="260dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/img_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_welcome"
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/welcome_to_focus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <TextView
            android:id="@+id/txt_dear_user"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome" />

        <TextView
            android:id="@+id/txt_welcome_message_1"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/welcome_message_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_dear_user" />

        <TextView
            android:id="@+id/txt_welcome_message_2"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/welcome_message_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_message_1" />

        <TextView
            android:id="@+id/txt_welcome_message_3"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/welcome_message_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_message_2" />

        <TextView
            android:id="@+id/txt_welcome_message_4"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/welcome_message_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_message_3" />

        <TextView
            android:id="@+id/txt_welcome_message_5"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/welcome_message_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_message_4" />

        <TextView
            android:id="@+id/txt_welcome_footer_1"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/welcome_footer_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_message_5" />

        <TextView
            android:id="@+id/txt_welcome_footer_2"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/welcome_footer_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_footer_1" />

        <TextView
            android:id="@+id/txt_welcome_footer_3"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/welcome_footer_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_footer_2" />

        <TextView
            android:id="@+id/txt_welcome_footer_4"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/welcome_footer_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_footer_3" />

        <TextView
            android:id="@+id/txt_privacy_policy"
            style="@style/TextViewBoldClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:text="@string/privacy_policy"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_footer_4" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
