<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect">

        <TextView
            android:id="@+id/txt_survey_label"
            style="@style/TextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:padding="16dp"
            android:text="@string/history_survey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_survey"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_answered_label"
            style="@style/TextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            android:text="@string/history_answered"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_survey_label" />

        <TextView
            android:id="@+id/txt_answered"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            android:textColor="@color/blueDark"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_survey_label" />

        <TextView
            android:id="@+id/txt_start_date_label"
            style="@style/TextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            android:text="@string/history_start_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_answered_label" />

        <TextView
            android:id="@+id/txt_start_date"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_start_date_label" />

        <TextView
            android:id="@+id/txt_end_date_label"
            style="@style/TextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            android:text="@string/history_end_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_start_date_label" />

        <TextView
            android:id="@+id/txt_end_date"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_start_date_label" />

        <TextView
            android:id="@+id/txt_panel_label"
            style="@style/TextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            android:text="@string/history_panel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_end_date_label" />

        <TextView
            android:id="@+id/txt_panel"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_end_date_label" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
