<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/txt_title"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/recover_password_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_username"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:hint="@string/username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <EditText
                android:id="@+id/txt_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_margin="16dp"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_username" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_recover_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/bluePrimary"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_email">

                <Button
                    android:id="@+id/btn_recover_password"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect_blue"
                    android:text="@string/send" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/txt_footer"
                style="@style/TextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/recover_password_footer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_recover_password" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loader"
        android:clickable="true"
        android:visibility="gone" />
</FrameLayout>
