<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="260dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/img_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_username"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="29dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:hint="@string/username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="29dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_username" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/bluePrimary"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_password"
                app:layout_goneMarginEnd="24dp">

                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect_blue"
                    android:text="@string/sign_in" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_sign_in">

                <Button
                    android:id="@+id/btn_sign_up"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/sign_up"
                    android:textColor="@color/bluePrimary" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/btn_forgot_password"
                style="@style/TextViewClickable"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_view_height"
                android:layout_marginTop="24dp"
                android:padding="0dp"
                android:text="@string/forgot_password"
                android:textColor="@color/blueDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_sign_up" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loader"
        android:clickable="true"
        android:visibility="gone" />
</FrameLayout>
